Fixed application min-height on tablet devices

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -49,7 +49,7 @@ html,body {
 }
 
 #app {
-  min-height: 100%;
+  min-height: 100vh;
 
   &,
   & main,
